R4 collection factories must run on minSdk 24
Replace remaining Java 9 List.of and Map.of calls on robot and simulator paths with Java 8 collection factories and explicit maps, preserving immutable empty/singleton behavior.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01SdkrbNwP3QT1rYDjT5r478